OWLS-111118 - Support envFrom for a configMapRef or secretRef source for container env variables.